--- a/plugins/newsletter-plugin/newsletter.css
+++ b/plugins/newsletter-plugin/newsletter.css
@@ -12,7 +12,7 @@
 
 #email-form label {
     font-size: 14px;
-    color: #333;
+    color:  #ff9100;
     display: block;
     margin-bottom: 5px;
 }
@@ -32,7 +32,7 @@
 #email-form button[type="submit"] {
     width: 100%;
     padding: 10px 15px;
-    background-color: #0073e6;
+    background-color: #ff9100;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -42,7 +42,7 @@
 }
 
 #email-form button[type="submit"]:hover {
-    background-color: #005bb5;
+    background-color: #ff9100;
 }
 
 
